k8s/base/whoami/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: whoami
