k8s/base/whoami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`whoami.k8s.test`)
      services:
        - kind: Service
          name: whoami-service
          port: 80
